added spring security on Boot

--- a/sem-work/src/main/resources/application.properties
+++ b/sem-work/src/main/resources/application.properties
@@ -6,8 +6,8 @@ db.driver.classname=org.postgresql.Driver
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=11906test@gmail.com
-spring.mail.password=mflangofcisp
+spring.mail.username=........
+spring.mail.password=........
 
 server.url=http://localhost:8080
 spring.profile=master
