--- a/test_tasks/2. Car Numbs/src/main/resources/application.properties
+++ b/test_tasks/2. Car Numbs/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=
+spring.datasource.url=jdbc:postgresql://localhost:5432/ai-novus
 spring.datasource.username=
 spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
